Fixed sidebars collapse order + right sidebar as overlay on mobile

--- a/src/app/documentations/documentations.component.less
+++ b/src/app/documentations/documentations.component.less
@@ -56,6 +56,12 @@
         .panel-toggle {
           display: none;
         }
+
+        &.overlay {
+          position: absolute;
+          right: 0;
+          background-color: inherit;
+        }
       }
 
       &:hover {
